# feanor

./: Dockerfile  README.md  app.py  config.yaml  main.py  patterns.py  pyproject.toml  run.py  vars.py  xtream.py
.github/workflows/: docker.yaml
